--- a/src/css/front.css
+++ b/src/css/front.css
@@ -3,6 +3,19 @@
     -webkit-backdrop-filter: saturate(180%) blur(20px);
     backdrop-filter: saturate(180%) blur(20px);
 }
+.navbar-brand {
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 500 !important;
+}
+.navbar-toggler {
+    outline: none;
+    border-color: transparent !important;
+    box-shadow: transparent;
+}
+
+.navbar-toggler > .icon-close {
+    display: none;
+}
 
 .btn-outline-light:hover {
     color: #212529 !important;
