--- a/src/css/front.css
+++ b/src/css/front.css
@@ -1,5 +1,5 @@
 .navbar-blur {
-    background-color: #212529d5;
+    background-color: #ffffffd5;
     -webkit-backdrop-filter: saturate(180%) blur(20px);
     backdrop-filter: saturate(180%) blur(20px);
 }
@@ -11,6 +11,9 @@
     outline: none;
     border-color: transparent !important;
     box-shadow: transparent;
+}
+.navbar-toggler:focus {
+    box-shadow: none !important;
 }
 
 .navbar-toggler > .icon-close {
