--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,19 +2,22 @@
 <html lang="ko">
     {{> head}}
   <body>
-    {{> navbar}}
+    <dds-navbar nav-title="DDS">
+        <dds-navbar-item item-title="소개" item-link="/intro"></dds-navbar-item>
+
+    </dds-navbar>
 
 
-    <header class="bg-dark py-5">
+
+    <header class="bg-white py-5">
         <div class="container px-5 pt-4 pb-2">
             <div class="row gx-5 justify-content-center">
                 <div class="col-lg-6">
                     <div class="text-center my-5">
-                        <h1 class="display-5 fw-bolder text-white font-weight-lg mb-2">더 모던하고 깔끔한 게시판의 세계로</h1>
-                        <p class="lead text-white-50 font-weight-md mb-4" id="intro">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit!</p>
+                        <h1 class="display-5 fw-bolder text-dark font-weight-lg mb-2">더 모던하고 깔끔한 게시판의 세계로</h1>
+                        <p class="lead text-dark-50 font-weight-md mb-4" id="intro">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit!</p>
                         <div class="d-grid gap-3 d-sm-flex justify-content-sm-center" id="login_box">
-                            <button class="btn btn-primary font-weight-md text-light btn-lg px-4 btn-rounded" onclick="location.href = '/auth/signup'"><i class="fas fa-user-plus"></i> 가입</button>
-                            <button class="btn btn-outline-light font-weight-md text-light btn-lg px-4 me-sm-3 btn-rounded" onclick="location.href = '/auth/login'"><i class="fas fa-sign-in-alt"></i> 로그인</button>
+                            <button class="btn color-blue-100 text-primary font-weight-sm btn-lg px-4 btn-rounded" onclick="location.href = '/auth/signup'"><i class="fas fa-user-plus"></i> 가입</button>
                         </div>
                     </div>
                 </div>
@@ -25,7 +28,7 @@
 
     
     <section class="py-5" id="features">
-        <div class="container px-5 my-5">
+        <div class="container-fluid px-4 my-5">
             <div class="row gx-5">
                 <div class="col-lg-3">
                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
@@ -70,42 +73,6 @@
 
     {{> footer}}
 
-    <script>
-        // Test Ground
-
-        //getFeed(1)
-        getFeeeeeeeeeeed()
-        try {
-            let token = getToken('user')
-            if (checkToken(token)) {
-                document.querySelector("#login_box").innerHTML = `<button class="btn btn-danger font-weight-md text-light btn-lg px-4 btn-rounded" onclick="logout()"><i class="fas fa-user-minus"></i> 로그아웃</button>`
-                document.querySelector("#intro").innerText = '사용자로 로그인 완료'
-            }
-        } catch (error) {
-            
-        }
-
-        
-
-        async function getFeeeeeeeeeeed() {
-            let data = await getFeedRange(0)
-
-            document.querySelector('#logs').innerHTML = JSON.stringify(data)
-        }
-
-        async function appendFeeeeeeeeeeed() {
-            await insertFeed(document.querySelector("#exampleFormControlTextarea1").value)
-
-            setTimeout(() => {
-                Swal.fire({
-                    icon: 'success',
-                    title: '피드 작성 완료',
-                    showConfirmButton: false,
-                    timer: 1000
-                })
-            }, 300);
-        }
-    </script>
 
   </body>
 </html>
