--- a/src/css/front.css
+++ b/src/css/front.css
@@ -1,7 +1,7 @@
 .navbar-blur {
     background-color: #ffffffd5;
-    -webkit-backdrop-filter: saturate(180%) blur(20px);
-    backdrop-filter: saturate(180%) blur(20px);
+    -webkit-backdrop-filter: saturate(120%) blur(16px);
+    backdrop-filter: saturate(120%) blur(16px);
 }
 .navbar-brand {
     font-family: 'Noto Sans KR', sans-serif;
@@ -45,6 +45,13 @@
     font-weight: 500 !important;
 }
 
+.font-weight-sm {
+    font-family: 'Noto Sans KR', sans-serif;
+    word-break: keep-all;
+    font-weight: 400 !important;
+}
+
+
 .card-title{
     font-family: 'Noto Sans KR', sans-serif;
 
@@ -52,4 +59,13 @@
 
 .form-textarea{
     border: none !important;
+}
+
+.border-bottom {
+    border-bottom: 0.1px solid #d1d8df!important;
+
+}
+
+header {
+    margin-top: 30px;
 }
