--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,30 +4,19 @@
   <body>
     <dds-navbar nav-title="DDS">
         <dds-navbar-item item-title="소개" item-link="/intro"></dds-navbar-item>
-
     </dds-navbar>
 
 
-
-    <header class="bg-white py-5">
-        <div class="container px-5 pt-4 pb-2">
-            <div class="row gx-5 justify-content-center">
-                <div class="col-lg-6">
-                    <div class="text-center my-5">
-                        <h1 class="display-5 fw-bolder text-dark font-weight-lg mb-2">더 모던하고 깔끔한 게시판의 세계로</h1>
-                        <p class="lead text-dark-50 font-weight-md mb-4" id="intro">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit!</p>
-                        <div class="d-grid gap-3 d-sm-flex justify-content-sm-center" id="login_box">
-                            <button class="btn color-blue-100 text-primary font-weight-sm btn-lg px-4 btn-rounded" onclick="location.href = '/auth/signup'"><i class="fas fa-user-plus"></i> 가입</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
+    <dds-header 
+        header-title="디자인, 경계를 넘어"
+        header-sub-title="데벤트의 디자인 시스템은 디자인의 경계를 뛰어넘는 우아함을 선사합니다. 그야말로 경이로움에 가까운 전율을 느낄 수 있죠."
+        button-link="/"
+        button-title="보러가기">
+    </dds-header>
 
 
     
-    <section class="py-5" id="features">
+    <section class="py-1" id="features">
         <div class="container-fluid px-4 my-5">
             <div class="row gx-5">
                 <div class="col-lg-3">
