refactor: add scss
+ scss 적용

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,6 +4,7 @@
   <body>
     <dds-navbar nav-title="DDS">
         <dds-navbar-item item-title="소개" item-link="/intro"></dds-navbar-item>
+
     </dds-navbar>
 
 
@@ -35,7 +36,7 @@
                     modal-id="aaa"
                     modal-title="테스트 모달이에요."
                     modal-subtitle="명품 프로덕트의 시작은 언제나 모달이죠.">
-                        <dds-modal-button button-color="color-blue-100" button-text-color="text-primary" is-dismiss="false">저장</dds-modal-button>
+                        <dds-modal-button button-color="btn-primary" button-text-color="text-primary" is-dismiss="false">저장</dds-modal-button>
                         <dds-modal-button button-color="btn-light" button-text-color="text-dark" is-dismiss="true">취소</dds-modal-button>
                     </dds-modal>
                 </div>
@@ -48,7 +49,7 @@
                     </div>
 
                     <div class="d-grid gap-2">
-                        <button class="btn color-blue-100 text-primary" onclick="appendFeeeeeeeeeeed()">피드 작성</button>
+                        <button class="btn btn-primary" onclick="appendFeeeeeeeeeeed()">피드 작성</button>
                     </div>
 
                     <pre id="logs" style="white-space: pre-wrap;">
