--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="https://unpkg.com/shards-ui@latest/dist/css/shards.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"/>
-    <link rel="stylesheet" href="/css/front.css">
-    <link rel="stylesheet" href="/css/colors.css">
+    <link rel="stylesheet" href="/dist/style.css">
 
 </head>
