--- a/src/scss/assets/foundation/_color.scss
+++ b/src/scss/assets/foundation/_color.scss
@@ -3,12 +3,13 @@ $blue-200: #d1e3ff !default;
 $blue-300: #0c74f3 !default;
 $blue-500: #062a5c !default;
 
-$light-100: #f6f8f9 !default;
-$light: #E9ECEF !default;
+$green-100: #ccf2e1 !default;
+$green-200: #b1f4d3 !default;
+$green-300: #18b569 !default;
+
+
+
+$light-100: #f2f4f5 !default;
+$light-200: #dbdee0 !default;
 $dark: #212529 !default;
 
-$border-radius: 10px !default;
-
-$modal-shadow: 2px 0px 40px 5px #272d331e !default;
-
-$button-padding: 0.8rem 1.55rem !default;
