--- a/src/scss/assets/_navbar.scss
+++ b/src/scss/assets/_navbar.scss
@@ -1,4 +1,5 @@
 @import 'foundation/color';
+@import 'foundation/variable';
 
 
 
@@ -21,6 +22,7 @@
         box-shadow: none !important;
 
     }
+
 }
 
 .navbar-toggler {
