--- a/views/index.hbs
+++ b/views/index.hbs
@@ -22,50 +22,151 @@
     
     <section class="py-1" id="features">
         <div class="container-fluid px-4 my-5">
-            <div class="row gx-5">
-                <div class="col-lg-3">
-                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
-                    <h2 class="h4 fw-bolder">모달</h2>
-                    <p>부트스트랩 5와 데벤트 디자인 시스템이 만나 더 새로워지고 강력해진 모달로 돌아왔어요. div의 늪에서 빠져나올 준비, 되셨나요?</p>
+            <div class="row d-flex align-items-start">
+
+                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+                사이드바
+                </button>
+
+                <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasExampleLabel">Offcanvas</h5>
+                        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <div class="col-1 nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+
+                            <button class="nav-link btn btn-primary active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">Home</button>
+                            <button class="nav-link btn btn-success" id="v-pills-header-tab" data-bs-toggle="pill" data-bs-target="#v-pills-header" type="button" role="tab" aria-controls="v-pills-header" aria-selected="false">Header</button>
+
+                            <button class="nav-link btn btn-primary" id="v-pills-button-tab" data-bs-toggle="pill" data-bs-target="#v-pills-button" type="button" role="tab" aria-controls="v-pills-button" aria-selected="false">Button</button>
+                            <button class="nav-link btn btn-primary" id="v-pills-modal-tab" data-bs-toggle="pill" data-bs-target="#v-pills-modal" type="button" role="tab" aria-controls="v-pills-modal" aria-selected="false">Modal</button>
+                            <button class="nav-link btn btn-primary" id="v-pills-form-tab" data-bs-toggle="pill" data-bs-target="#v-pills-form" type="button" role="tab" aria-controls="v-pills-form" aria-selected="false">Form</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col tab-content" id="v-pills-tabContent">
+
+                    <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
+                        <h2 class="h4 font-title fw-bolder font-weight-md mt-2">소개</h2>
+
+                        <b>데벤트 디자인 시스템은 모든 서비스의 일관성을 지향합니다. 
+                            동시에 각 서비스만의 개성을 강조하며 전체를 커버할 수 있는 확장성 또한 고려됩니다.  
+                            이 같은 노력은 효율적인 개발을 위해 존재합니다.
+                        </b>
+                        <br><br>
+
+                        <h2 class="h4 font-title font-weight-md fw-bolder">철학</h2>
+
+                        <b>
+                            기술 윤리, 투명성, 지속적인 도전 <br>
+
+                            데벤트 디자인 시스템이 갖추어야 할 철학입니다.
+                        </b>
+
+
+
+                    </div>
+
+                    <div class="tab-pane fade" id="v-pills-header" role="tabpanel" aria-labelledby="v-pills-header-tab">
+                        <h2 class="h4 font-title fw-bolder font-weight-md mt-2">헤더 </h2>
+
+                        <b>헤더 디자인은 사용자가 처음으로 마주하는 중요한 페이지 입니다.
+                            따라서 직관적인 메시지를 심플하게 보여주어야 합니다.
+                            불필요한 메시지는 제외하고 하나의 제목, 하나의 부제목, 하나의 버튼 원칙을 고수합니다.
+                        </b>
+                        <br><br>
+
+
+
+<pre class="mt-4"><code data-language="html">&lt;dds-header 
+    header-title=&quot;디자인, 경계를 넘어&quot;
+    header-sub-title=&quot;데벤트의 디자인 시스템은 디자인의 경계를 뛰어넘는 우아함을 선사합니다. 그야말로 경이로움에 가까운 전율을 느낄 수 있죠.&quot;
+    button-link=&quot;/&quot;
+    button-title=&quot;보러가기&quot;&gt;
+&lt;/dds-header&gt;
+</code></pre>
+
+                    </div>
+
+                    <div class="tab-pane fade" id="v-pills-button" role="tabpanel" aria-labelledby="v-pills-button-tab">
+                        <h2 class="h4 fw-bolder font-weight-md mt-2">버튼 </h2>
+                        <b class="mb-2">
+                            라이트 테마에서의 버튼 디자인은 파스텔톤 위주의 컬러를 권고합니다.
+                            색상은 primary(blue), success(green), light(white), dark(black) 을 지원합니다. 
+                            
+                        </b>
+                        <br> <br>
+
+                    <button class="btn btn-primary">Primary</button>
+                    <button class="btn btn-success">Success</button>
+                    <button class="btn btn-light">Light</button>
+                    <button class="btn btn-dark">Dark</button>
+
+<pre class="mt-4"><code data-language="html"><button class="btn btn-primary">Primary</button>
+<button class="btn btn-success" >Success</button>
+<button class="btn btn-light" >Light</button>
+<button class="btn btn-dark">Dark</button>
+</code></pre>
+
+                    </div>
+
+                    <div class="tab-pane fade" id="v-pills-modal" role="tabpanel" aria-labelledby="v-pills-modal-tab">
+                        <h2 class="h4 fw-bolder font-weight-md mt-2">모달</h2>
+                        <b class="mb-2">부트스트랩 5와 데벤트 디자인 시스템이 만나 더 새로워지고 강력해진 모달로 돌아왔어요. div의 늪에서 빠져나올 준비, 되셨나요?</b> <br>
                     
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#aaa">
-                    Launch demo modal
-                    </button>
+                        <button type="button" class="btn btn-primary mt-2" data-bs-toggle="modal" data-bs-target="#aaa">
+                        Launch demo modal
+                        </button>
 
-                    <dds-modal
-                    modal-id="aaa"
-                    modal-title="테스트 모달이에요."
-                    modal-subtitle="명품 프로덕트의 시작은 언제나 모달이죠.">
-                        <dds-modal-button button-color="btn-primary" button-text-color="text-primary" is-dismiss="false">저장</dds-modal-button>
-                        <dds-modal-button button-color="btn-light" button-text-color="text-dark" is-dismiss="true">취소</dds-modal-button>
-                    </dds-modal>
-                </div>
-                <div class="col-lg-6">
-                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
-                    <h2 class="h4 fw-bolder">Feed </h2>
+                        <dds-modal
+                        modal-id="aaa"
+                        modal-title="테스트 모달이에요."
+                        modal-subtitle="명품 프로덕트의 시작은 언제나 모달이죠.">
+                            <dds-modal-button button-color="btn-primary" button-text-color="text-primary" is-dismiss="false">저장</dds-modal-button>
+                            <dds-modal-button button-color="btn-light" button-text-color="text-dark" is-dismiss="true">취소</dds-modal-button>
+                        </dds-modal>
 
-                    <div class="mb-3">
-                        <textarea class="form-control form-textarea color-gray-100" id="exampleFormControlTextarea1" rows="3"></textarea>
+
+
+                        
+<pre class="mt-4"><code data-language="html">
+&lt;button type=&quot;button&quot; class=&quot;btn btn-primary mt-2&quot; data-bs-toggle=&quot;modal&quot; data-bs-target=&quot;#aaa&quot;&gt;
+    Launch demo modal
+&lt;/button&gt;
+
+&lt;dds-modal
+    modal-id=&quot;aaa&quot;
+    modal-title=&quot;테스트 모달이에요.&quot;
+    modal-subtitle=&quot;명품 프로덕트의 시작은 언제나 모달이죠.&quot;&gt;
+        &lt;dds-modal-button button-color=&quot;btn-primary&quot; button-text-color=&quot;text-primary&quot; is-dismiss=&quot;false&quot;&gt;저장&lt;/dds-modal-button&gt;
+        &lt;dds-modal-button button-color=&quot;btn-light&quot; button-text-color=&quot;text-dark&quot; is-dismiss=&quot;true&quot;&gt;취소&lt;/dds-modal-button&gt;
+&lt;/dds-modal&gt;
+</code></pre>
+
                     </div>
 
-                    <div class="d-grid gap-2">
-                        <button class="btn btn-primary" onclick="appendFeeeeeeeeeeed()">피드 작성</button>
+                    <div class="tab-pane fade" id="v-pills-form" role="tabpanel" aria-labelledby="v-pills-form-tab">
+                        
+                        <h2 class="h4 fw-bolder font-weight-md mt-2">Textarea </h2>
+
+                        <div class="mb-3">
+                            <textarea class="form-control " id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
+
+                        <h2 class="h4 fw-bolder font-weight-md mt-2">Input </h2>
+
+                        <div class="mb-3">
+                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                        </div>
+
+
                     </div>
 
-                    <pre id="logs" style="white-space: pre-wrap;">
-
-                    </pre>
-                </div>
-                <div class="col-lg-3">
-                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
-                    <h2 class="h4 fw-bolder">Featured title</h2>
-                    <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-                    <a class="text-decoration-none" href="#!">
-                        Call to action
-                        <i class="bi bi-arrow-right"></i>
-                    </a>
                 </div>
             </div>
+
         </div>
     </section>
 
