--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,6 +13,12 @@
         header-sub-title="데벤트의 디자인 시스템은 디자인의 경계를 뛰어넘는 우아함을 선사합니다. 그야말로 경이로움에 가까운 전율을 느낄 수 있죠."
         button-link="/"
         button-title="보러가기">
+        
+        <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
+            <button class="btn btn-primary font-weight-sm px-4 py-3 mt-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+                사이드바 열기
+            </button>
+        </div>
     </dds-header>
 
 
@@ -24,27 +30,22 @@
         <div class="container-fluid px-4 my-5">
             <div class="row d-flex align-items-start">
 
-                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                사이드바
-                </button>
 
-                <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
-                    <div class="offcanvas-header">
-                        <h5 class="offcanvas-title" id="offcanvasExampleLabel">Offcanvas</h5>
-                        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                <dds-sidebar 
+                    sidebar-title="사이드바"
+                    sidebar-id="offcanvasExample">
+
+                    <div class="nav flex-column me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+
+                        <button class="nav-link btn active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">Home</button>
+                        <button class="nav-link btn" id="v-pills-header-tab" data-bs-toggle="pill" data-bs-target="#v-pills-header" type="button" role="tab" aria-controls="v-pills-header" aria-selected="false">Header</button>
+
+                        <button class="nav-link btn" id="v-pills-button-tab" data-bs-toggle="pill" data-bs-target="#v-pills-button" type="button" role="tab" aria-controls="v-pills-button" aria-selected="false">Button</button>
+                        <button class="nav-link btn" id="v-pills-modal-tab" data-bs-toggle="pill" data-bs-target="#v-pills-modal" type="button" role="tab" aria-controls="v-pills-modal" aria-selected="false">Modal</button>
+                        <button class="nav-link btn" id="v-pills-form-tab" data-bs-toggle="pill" data-bs-target="#v-pills-form" type="button" role="tab" aria-controls="v-pills-form" aria-selected="false">Form</button>
                     </div>
-                    <div class="offcanvas-body">
-                        <div class="col-1 nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                </dds-sidebar>
 
-                            <button class="nav-link btn btn-primary active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">Home</button>
-                            <button class="nav-link btn btn-success" id="v-pills-header-tab" data-bs-toggle="pill" data-bs-target="#v-pills-header" type="button" role="tab" aria-controls="v-pills-header" aria-selected="false">Header</button>
-
-                            <button class="nav-link btn btn-primary" id="v-pills-button-tab" data-bs-toggle="pill" data-bs-target="#v-pills-button" type="button" role="tab" aria-controls="v-pills-button" aria-selected="false">Button</button>
-                            <button class="nav-link btn btn-primary" id="v-pills-modal-tab" data-bs-toggle="pill" data-bs-target="#v-pills-modal" type="button" role="tab" aria-controls="v-pills-modal" aria-selected="false">Modal</button>
-                            <button class="nav-link btn btn-primary" id="v-pills-form-tab" data-bs-toggle="pill" data-bs-target="#v-pills-form" type="button" role="tab" aria-controls="v-pills-form" aria-selected="false">Form</button>
-                        </div>
-                    </div>
-                </div>
 
                 <div class="col tab-content" id="v-pills-tabContent">
 
