--- a/src/scss/assets/foundation/_color.scss
+++ b/src/scss/assets/foundation/_color.scss
@@ -1,13 +1,19 @@
 $blue-100: #dbe9fd !default;
-$blue-200: #d1e3ff !default;
+$blue-200: #cadbf7 !default;
 $blue-300: #0c74f3 !default;
 $blue-500: #062a5c !default;
 
 $green-100: #ccf2e1 !default;
-$green-200: #b1f4d3 !default;
-$green-300: #18b569 !default;
+$green-200: #b2e4cb !default;
+$green-300: #13b566 !default;
 
+$red-100: #fddbdb !default;
+$red-200: #f2cfcf !default;
+$red-300: #be2b0a !default;
 
+$yellow-100: #f7f5df !default;
+$yellow-200: #edf0c4 !default;
+$yellow-300: #b8aa10 !default;
 
 $light-100: #f2f4f5 !default;
 $light-200: #dbdee0 !default;
