refactor: removed shard ui
+ Shard UI 의존성 제거

--- a/src/scss/assets/_button.scss
+++ b/src/scss/assets/_button.scss
@@ -11,6 +11,8 @@
   font-family: 'Noto Sans KR', sans-serif;
   word-break: keep-all;
   font-weight: 400 !important;
+  font-size: .875rem;
+  line-height: 1.325;
 }
 
 
