--- a/src/scss/assets/_navbar.scss
+++ b/src/scss/assets/_navbar.scss
@@ -12,6 +12,7 @@
 .navbar-brand {
     font-family: 'Noto Sans KR', sans-serif;
     font-weight: 500 !important;
+    font-size: 1rem;
 }
 
 .navbar-toggler {
