--- a/src/scss/assets/_offcanvas.scss
+++ b/src/scss/assets/_offcanvas.scss
@@ -4,7 +4,7 @@
 
 
 .offcanvas {
-    background-color: #ffffffa6;
+    background-color: #ffffffd5;
     -webkit-backdrop-filter: saturate(120%) blur(16px);
     backdrop-filter: saturate(120%) blur(16px);
 }
@@ -12,9 +12,20 @@
 .nav-link {
     text-align:left; 
     padding-left:0px !important;
+    transition: all .24s ease-out;
+
+    &:hover, &:focus, &:active, &:visited {
+        background-color: $blue-100;
+        padding-left: 6px !important;
+        transition: all .1s ease-in;
+
+    }
 }
 
+
 .offcanvas-header > i {
-    padding: 0rem 0rem !important;
+    padding: .25rem .75rem !important;
+    padding-right: 0px !important;
     margin-bottom: 0rem !important;
+    font-size: 1rem;
 }
