--- a/views/index.hbs
+++ b/views/index.hbs
@@ -33,11 +33,12 @@
                     sidebar-title="사이드바"
                     sidebar-id="offcanvasExample">
 
-                    <div class="nav flex-column me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                    <div class="nav flex-column me-0" id="v-pills-tab" role="tablist" aria-orientation="vertical">
 
                         <button class="nav-link btn active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home" aria-selected="true" onclick="hideSidebar()">Home</button>
                         <button class="nav-link btn" id="v-pills-header-tab" data-bs-toggle="pill" data-bs-target="#v-pills-header" type="button" role="tab" aria-controls="v-pills-header" aria-selected="false" onclick="hideSidebar()">Header</button>
                         <button class="nav-link btn" id="v-pills-navbar-tab" data-bs-toggle="pill" data-bs-target="#v-pills-navbar" type="button" role="tab" aria-controls="v-pills-navbar" aria-selected="false" onclick="hideSidebar()">Navbar</button>
+                        <button class="nav-link btn" id="v-pills-sidebar-tab" data-bs-toggle="pill" data-bs-target="#v-pills-sidebar" type="button" role="tab" aria-controls="v-pills-sidebar" aria-selected="false" onclick="hideSidebar()">Sidebar</button>
 
                         <button class="nav-link btn" id="v-pills-button-tab" data-bs-toggle="pill" data-bs-target="#v-pills-button" type="button" role="tab" aria-controls="v-pills-button" aria-selected="false" onclick="hideSidebar()">Button</button>
                         <button class="nav-link btn" id="v-pills-modal-tab" data-bs-toggle="pill" data-bs-target="#v-pills-modal" type="button" role="tab" aria-controls="v-pills-modal" aria-selected="false" onclick="hideSidebar()">Modal</button>
@@ -121,6 +122,29 @@
 &lt;dds-navbar nav-title=&quot;DDS&quot;&gt;
     &lt;dds-navbar-item item-title=&quot;소개&quot; item-link=&quot;/intro&quot;&gt;&lt;/dds-navbar-item&gt;
 &lt;/dds-navbar&gt;</code>
+                        </pre>
+                    </div>
+
+                    <div class="tab-pane fade" id="v-pills-sidebar" role="tabpanel" aria-labelledby="v-pills-sidebar-tab">
+                        <h2 class="h4 font-title fw-bolder font-weight-md mt-2">사이드 바 </h2>
+                        <p class="font-weight-sm mb-4">
+                            사이드바는 부트스트랩5 에서의 offcanvas 기능이에요.
+                            메뉴나 콘텐츠, 핸들링이 필요하다면 사이드바를 이용하면 됩니다.
+                        </p>
+
+                        <pre class="mt-4">
+                            <code data-language="html">
+&lt;button class=&quot;btn btn-blue font-weight-sm px-4 py-3 mt-2&quot; type=&quot;button&quot; data-bs-toggle=&quot;offcanvas&quot; data-bs-target=&quot;#offcanvasExample&quot; aria-controls=&quot;offcanvasExample&quot;&gt;
+    사이드바 열기
+&lt;/button&gt;
+
+&lt;dds-sidebar 
+    sidebar-title=&quot;사이드바&quot;
+    sidebar-id=&quot;offcanvasExample&quot;&gt;
+
+
+&lt;/dds-sidebar&gt;
+</code>
                         </pre>
                     </div>
 
@@ -209,6 +233,8 @@
 
         </div>
     </section>
+
+    
 
 
     {{> footer}}
