--- a/src/scss/assets/_font.scss
+++ b/src/scss/assets/_font.scss
@@ -24,6 +24,14 @@
     font-weight: 400 !important;
 }
 
+.font-link{
+    font-family: 'Noto Sans KR', sans-serif;
+    word-break: keep-all;
+    font-weight: 400 !important;
+    color: $dark !important;
+    text-decoration: none;
+}
+
 .close {
     font-size: 13px !important;
 }
