fear: added footer
+ 푸터 엘리먼트 추가

--- a/src/scss/assets/_offcanvas.scss
+++ b/src/scss/assets/_offcanvas.scss
@@ -24,8 +24,8 @@
 
 
 .offcanvas-header > i {
-    padding: .25rem .75rem !important;
-    padding-right: 0px !important;
+    padding: .45rem .75rem !important;
+    padding-right: .35rem !important;
     margin-bottom: 0rem !important;
     font-size: 1rem;
 }
