--- a/src/scss/assets/_navbar.scss
+++ b/src/scss/assets/_navbar.scss
@@ -21,6 +21,7 @@
     box-shadow: transparent;
     padding: .25rem .75rem;
     padding-right: 0px !important;
+    font-size: 0rem;
     &:focus {
         box-shadow: none !important;
 
